2019-11-11  Jakub Jelinek  <jakub@redhat.com>

	PR c++/92447
	* decl.c (finish_function): Move ctype initialization before
	DECL_DELETED_FN handling.

	* semantics.c (finish_translation_unit): Diagnose declare target
	without corresponding end declare target.

2019-11-10  Jason Merrill  <jason@redhat.com>

	Implement D1957R0, T* to bool should be considered narrowing.
	* typeck2.c (check_narrowing): Treat pointer->bool as a narrowing
	conversion with -std=c++2a.

2019-11-08  Marek Polacek  <polacek@redhat.com>

	PR c++/92215 - flawed diagnostic for bit-field with non-integral type.
	* parser.c (cp_parser_member_declaration): Add a diagnostic for
	bit-fields with non-integral types.

2019-11-08  Jakub Jelinek  <jakub@redhat.com>

	* init.c (build_vec_delete_1): Fix a comment typo - mist -> must.

2019-11-07  Jason Merrill  <jason@redhat.com>

	Implement D1959R0, remove weak_equality and strong_equality.
	* method.c (enum comp_cat_tag, comp_cat_info): Remove *_equality.
	(genericize_spaceship, common_comparison_type): Likewise.
	* typeck.c (cp_build_binary_op): Move SPACESHIP_EXPR to be with the
	relational operators, exclude other types no longer supported.

2019-11-06  Jason Merrill  <jason@redhat.com>

	Implement D1907R1 "structural type".
	* tree.c (structural_type_p): New.
	* pt.c (invalid_nontype_parm_type_p): Use it.
	* class.c (build_base_field_1): Take binfo.  Copy TREE_PRIVATE.
	(build_base_field): Pass binfo.

	PR c++/92150 - partial specialization with class NTTP.
	* pt.c (unify): Handle VIEW_CONVERT_EXPR.

	* pt.c (use_pack_expansion_extra_args_p): Still do substitution if
	all packs are simple pack expansions.
	(add_extra_args): Check that the extra args aren't dependent.

2019-11-06  Andrew Sutton  <asutton@lock3software.com>

	Use satisfaction with nested requirements.
	* constraint.cc (build_parameter_mapping): Use
	current_template_parms when the declaration is not available.
	(norm_info::norm_info) Make explicit.