@@ -1,3 +1,7 @@
+2019-11-11  Jason Merrill  <jason@redhat.com>
+
+	* typeck.c (cp_build_binary_op): Sorry about <=> on VECTOR_TYPE.
+
 2019-11-11  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/92447
